@@ -1,4 +1,4 @@
 AUX smplayer-0.6.8-quit.patch 559 RMD160 57a13ce73bf1bc42ff84afa93740b2b91979c68a SHA1 cd6747917b8a8a71d46b8841d7924c4e304bb636 SHA256 52bd82633b4561613675121ae10af12ef25a11b7343eea043a3a70dd32aa999a
-EBUILD smplayer-9999.ebuild 2601 RMD160 96a2594ac2a2bc6dc8c026e7dc423212b940d3ad SHA1 e0d23090963347d9f808925824395eed149d62b5 SHA256 e341b92716c6b05356065b7d7e7dc5cc155c7d469c4b4f9eeab9a878257cdfac
-MISC ChangeLog 370 RMD160 c983f7278617866924fd2af3dd20005548a8a7af SHA1 7755b3f2ca43cec1782efe92b391a4712896b8cb SHA256 4502e7f3d609c307d66e919d08494488bb4b8d9f614edc936dd9fdc001ad6059
+EBUILD smplayer-9999.ebuild 2371 RMD160 fc9560fab378ad1370594c7fef6fd9c741e14a54 SHA1 b24c1a568517a07d6f24c19890bc9f58211e56d2 SHA256 d344e1b893b6a4277f7e8e27ddfa77569a1f17f44f2d07326dfa0aa014dfca7c
+MISC ChangeLog 474 RMD160 b48fe34444d5bfd6edbf4c5b8152d4ffe65c7db3 SHA1 cb62da27752a44f6462772ef9877971d0fff7147 SHA256 c6cb9b7103bc90bab59a6dca721c7e668a78c5305ba6a4f7d01fc3cf5d9457f4
 MISC metadata.xml 248 RMD160 3dd3ed866d9de9b9e1e757a75ad74cd04a179a0a SHA1 ee402648473a449107fdc483b2452b655887f15c SHA256 319bbc38f5d834b6230f477c4330ff29d94c9447f563551c977e5c3b038aecaf
